--- a/personal-film-portfolio.html
+++ b/personal-film-portfolio.html
@@ -89,15 +89,15 @@
 
 <div class="gallery">
     <div class="preview">
-    <img name="preview" src="images/Nona1.jpg" alt="Nona"/>
+    <img name="preview" src="images/Nona1.png" alt="Nona"/>
   </div>
   <div class="thumbnails">
-    <img onmouseover="preview.src=Nona1.src" name="Nona1" src="images/Nona1.jpg" alt="Nona 1"/>
-    <img onmouseover="preview.src=Nona2.src" name="Nona2" src="images/Nona2.jpg" alt="Nona 2"/>
-    <img onmouseover="preview.src=Nona3.src" name="Nona3" src="images/Nona3.jpg" alt="Nona 3"/>
-    <img onmouseover="preview.src=Nona4.src" name="Nona4" src="images/Nona4.jpg" alt="Nona 4"/>
-    <img onmouseover="preview.src=Nona5.src" name="Nona5" src="images/Nona5.jpg" alt="Nona 5"/>
-    <img onmouseover="preview.src=Nona6.src" name="Nona6" src="images/Nona6.jpg" alt="Nona 6"/>
+    <img onmouseover="preview.src=Nona1.src" name="Nona1" src="images/Nona1.png" alt="Nona 1"/>
+    <img onmouseover="preview.src=Nona2.src" name="Nona2" src="images/Nona2.png" alt="Nona 2"/>
+    <img onmouseover="preview.src=Nona3.src" name="Nona3" src="images/Nona3.png" alt="Nona 3"/>
+    <img onmouseover="preview.src=Nona4.src" name="Nona4" src="images/Nona4.png" alt="Nona 4"/>
+    <img onmouseover="preview.src=Nona5.src" name="Nona5" src="images/Nona5.png" alt="Nona 5"/>
+    <img onmouseover="preview.src=Nona6.src" name="Nona6" src="images/Nona6.png" alt="Nona 6"/>
   </div>
 <br>
 
@@ -275,10 +275,11 @@
   A friend's thesis film.
 </p>
 </div>
+</div>
 
 <br><br>
 
-</div>
+</body>
 
 <script type="text/javascript">
 function openMenu() {
@@ -309,5 +310,4 @@ window.onclick = function(event) {
   gtag('config', 'UA-106541861-1');
 </script>
 
-</body>
 </html>
