--- a/tv-studio-renovation.html
+++ b/tv-studio-renovation.html
@@ -58,35 +58,48 @@
 
 <div class="main">
 
-<a name="TV Studio Renovation"></a>
 <hr color="#50A8AF">
-<h2>TV Studio Renovation (Summer 2017)</h2>
+<h2>Cyclorama Construction</h2>
 <hr color="#50A8AF">
 <br>
 
-  <div class="thumbnails" align="center">
-    <h3>Cyclorama Construction</h3>
-    <img onmouseover="preview.src=Cyclorama1.src" name="Cyclorama1" src="images/Cyc1.jpg" alt="Cyclorama"/>
-    <img onmouseover="preview.src=Cyclorama2.src" name="Cyclorama2" src="images/Cyc2.jpg" alt="Cyclorama"/>
-    <img onmouseover="preview.src=Cyclorama3.src" name="Cyclorama3" src="images/Cyc3.jpg" alt="Cyclorama"/>
-    <img onmouseover="preview.src=Cyclorama4.src" name="Cyclorama4" src="images/Cyc4.jpg" alt="Cyclorama"/>
-    <img onmouseover="preview.src=Cyclorama5.src" name="Cyclorama5" src="images/Cyc5.jpg" alt="Cyclorama"/>
-    <img onmouseover="preview.src=Cyclorama6.src" name="Cyclorama6" src="images/Cyc6.jpg" alt="Cyclorama"/>
-    <img onmouseover="preview.src=Cyclorama7.src" name="Cyclorama7" src="images/Cyc7.jpg" alt="Cyclorama"/>
-    <h3>Studio Control Room (Before & After)</h3>
-    <img onmouseover="preview.src=Control1.src" name="Control1" src="images/Control1.jpg" alt="Control Room Before"/>
-    <img onmouseover="preview.src=Control2.src" name="Control2" src="images/Control2.jpg" alt="Control Room Before"/>
-    <img onmouseover="preview.src=Control3.src" name="Control3" src="images/Control3.jpg" alt="Control Room After"/>
-    <img onmouseover="preview.src=Control4.src" name="Control4" src="images/Control4.jpg" alt="Control Room After"/>
-    <img onmouseover="preview.src=Control5.src" name="Control5" src="images/Control5.jpg" alt="Control Room After"/>
-    <img onmouseover="preview.src=Control6.src" name="Control6" src="images/Control6.jpg" alt="Control Room After"/>
+<div class="gallery">
+  <div class="preview">
+  <img name="preview" src="images/Cyc2.png" alt="Cyclorama"/>
   </div>
-  <br>
-  <div class="gallery">
-    <div class="preview">
-    <img name="preview" src="images/Cyc7.jpg" alt="Cyclorama"/>
-  </div>
+    <div class="thumbnails" align="center">
+      <img onmouseover="preview.src=Cyclorama1.src" name="Cyclorama1" src="images/Cyc1.png" alt="Cyclorama"/>
+      <img onmouseover="preview.src=Cyclorama2.src" name="Cyclorama2" src="images/Cyc2.png" alt="Cyclorama"/>
+      <img onmouseover="preview.src=Cyclorama3.src" name="Cyclorama3" src="images/Cyc3.png" alt="Cyclorama"/>
+      <img onmouseover="preview.src=Cyclorama4.src" name="Cyclorama4" src="images/Cyc4.png" alt="Cyclorama"/>
+      <img onmouseover="preview.src=Cyclorama5.src" name="Cyclorama5" src="images/Cyc5.png" alt="Cyclorama"/>
+      <img onmouseover="preview.src=Cyclorama6.src" name="Cyclorama6" src="images/Cyc6.png" alt="Cyclorama"/>
+      <img onmouseover="preview.src=Cyclorama7.src" name="Cyclorama7" src="images/Cyc7.png" alt="Cyclorama"/>
+    </div>
+</div>
+
 <br><br>
+
+<hr color="#50A8AF">
+<h2>Studio Control Room (Before & After)</h2>
+<hr color="#50A8AF">
+<br>
+
+<div class="gallery">
+  <div class="preview">
+  <img name="preview2" src="images/Control3.png" alt="Control Room"/>
+  </div>
+    <div class="thumbnails" align="center">
+      <img onmouseover="preview2.src=Control1.src" name="Control1" src="images/Control1.png" alt="Control Room Before"/>
+      <img onmouseover="preview2.src=Control2.src" name="Control2" src="images/Control2.png" alt="Control Room Before"/>
+      <img onmouseover="preview2.src=Control3.src" name="Control3" src="images/Control3.png" alt="Control Room After"/>
+      <img onmouseover="preview2.src=Control4.src" name="Control4" src="images/Control4.png" alt="Control Room After"/>
+      <img onmouseover="preview2.src=Control5.src" name="Control5" src="images/Control5.png" alt="Control Room After"/>
+      <img onmouseover="preview2.src=Control6.src" name="Control6" src="images/Control6.png" alt="Control Room After"/>
+    </div>
+  </div>
+<br>
+
 <div class="space">
 <p>
 As the Media Alumni Fellow at Hamphsire College, I upgraded the existing media production facilities. This included designing and constructing a 4K broadcast TV studio with a cyclorama green screen and four camera live switching. I also upgraded workstation computers in four advanced media labs, and serviced and operated a Form Labs 3D printer/scanner.
@@ -96,7 +109,7 @@ As the Media Alumni Fellow at Hamphsire College, I upgraded the existing media p
 
 <br><br>
 
-</div>
+</body>
 
 <script type="text/javascript">
 function openMenu() {
@@ -127,5 +140,4 @@ window.onclick = function(event) {
   gtag('config', 'UA-106541861-1');
 </script>
 
-</body>
 </html>
