--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -7,7 +7,7 @@
 
 <style type="text/css">
 .preview img {
-  width: 30%;
+  width: 35%;
 }
 </style>
 
@@ -66,7 +66,7 @@
 
 <div class="gallery">
  <div class="preview">
-  <img name="preview" src="images/Ben_Cowper.jpg" alt="Ben Cowper">
+  <img name="preview" src="images/Ben_Cowper.png" alt="Ben Cowper">
  </div>
 </div>
 
@@ -199,12 +199,12 @@ I am highly skilled in the following roles:
 		<h4>Williston-Northampton Film Festival (2012)</h4>
 		<p>Director of a short film screened at the festival</p>
 	</div>
-
+</div>
 </div>
 
 <br><br>
 
-</div>
+</body>
 
 <script type="text/javascript">
 function openMenu() {
@@ -235,5 +235,4 @@ window.onclick = function(event) {
   gtag('config', 'UA-106541861-1');
 </script>
 
-</body>
 </html>
