--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -64,23 +64,24 @@
 <hr color="#50A8AF">
 <br>
 
-  <div class="thumbnails" align="center">
-    <img onmouseover="preview.src=Sunglasses.src" name="Sunglasses" src="images/Sunglasses.jpg" alt="Sunglasses"/>
-    <img onmouseover="preview.src=Snowflake.src" name="Snowflake" src="images/Snowflake.jpg" alt="Snowflakes"/>
-    <img onmouseover="preview.src=SanFrancisco.src" name="SanFrancisco" src="images/SanFrancisco.jpg" alt="San Francisco"/>
-    <img onmouseover="preview.src=RedBarn.src" name="RedBarn" src="images/RedBarn.jpg" alt="Red Barn Event"/>
-    <img onmouseover="preview.src=Moon.src" name="Moon" src="images/Moon.jpg" alt="Moon"/>
-    <img onmouseover="preview.src=Mountain.src" name="Mountain" src="images/Mountain.jpg" alt="Montana Mountain"/>
-    <img onmouseover="preview.src=Boat.src" name="Boat" src="images/Boat.jpg" alt="Middletown Boat"/>
-    <img onmouseover="preview.src=Squam.src" name="Squam" src="images/Squam.jpg" alt="Squam Lake"/>
-    <img onmouseover="preview.src=Yellowstone.src" name="Yellowstone" src="images/Yellowstone.jpg" alt="Yellowstone"/>
-  </div>
-<br>
 <div class="gallery">
     <div class="preview">
-    <img name="preview" src="images/Sunglasses.jpg" alt="Sunglasses"/>
+    <img name="preview" src="images/Sunglasses.png" alt="Sunglasses"/>
   </div>
-<br><br>
+  <div class="thumbnails">
+    <img onmouseover="preview.src=Sunglasses.src" name="Sunglasses" src="images/Sunglasses.png" alt="Sunglasses"/>
+    <img onmouseover="preview.src=Snowflake.src" name="Snowflake" src="images/Snowflake.png" alt="Snowflakes"/>
+    <img onmouseover="preview.src=SanFrancisco.src" name="SanFrancisco" src="images/SanFrancisco.png" alt="San Francisco"/>
+    <img onmouseover="preview.src=RedBarn.src" name="RedBarn" src="images/RedBarn.png" alt="Red Barn Event"/>
+    <img onmouseover="preview.src=Moon.src" name="Moon" src="images/Moon.png" alt="Moon"/>
+    <img onmouseover="preview.src=Mountain.src" name="Mountain" src="images/Mountain.png" alt="Montana Mountain"/>
+    <br>
+    <img onmouseover="preview.src=Boat.src" name="Boat" src="images/Boat.png" alt="Middletown Boat"/>
+    <img onmouseover="preview.src=Squam.src" name="Squam" src="images/Squam.png" alt="Squam Lake"/>
+    <img onmouseover="preview.src=Yellowstone.src" name="Yellowstone" src="images/Yellowstone.png" alt="Yellowstone"/>
+  </div>
+<br>
+
 <div class="space">
 <p>
   Commercial and Art Photography
@@ -89,10 +90,11 @@
 </p>
 </div>
 </div>
+</div>
 
 <br><br>
 
-</div>
+</body>
 
 <script type="text/javascript">
 function openMenu() {
@@ -123,5 +125,4 @@ window.onclick = function(event) {
   gtag('config', 'UA-106541861-1');
 </script>
 
-</body>
 </html>
