--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -143,6 +143,11 @@ I am highly skilled in the following roles:
 
 	<div class="column">
 		<h3>Teaching</h3>
+		<h4>Education and Media Technology Coordinator (2017)
+		<br>
+		University of Minnesota-Twin Cities</h4>
+		<p> </p>
+
 		<h4>Media Alumni Fellow (2017)
 		<br>
 		Hampshire College</h4>
