optimized image layout

--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -5,14 +5,8 @@
 <title>Filmmaker, Educator, Artist | About Me - Ben Cowper</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
 
-<style type="text/css">
-.preview img {
-  width: 35%;
-}
-</style>
-
-<link rel="stylesheet" type="text/css" media="only screen and (max-width: 480px), only screen and (max-device-width: 480px)" href="mobile.css" />
-<link rel="author" href="humans.txt" />
+<link rel="stylesheet" type="text/css" media="only screen and (max-width: 480px), only screen and (max-device-width: 480px)" href="mobile.css">
+<link rel="author" href="humans.txt">
 
 <link rel="shortcut icon" href="icons/favicon.ico">
 <link rel="icon" sizes="16x16 32x32 64x64" href="icons/favicon.ico">
@@ -64,15 +58,11 @@
 <hr color="#50A8AF">
 <br>
 
-<div class="gallery">
- <div class="preview">
-  <img name="preview" src="images/Ben_Cowper.png" alt="Ben Cowper">
- </div>
-</div>
+<img class="space" id="me" src="images/Ben_Cowper.jpg" alt="Ben Cowper">
 
 <br>
 
-<div style="margin-left: 3%; margin-right: 3%;">
+<div class="space">
 
 <p>
 In 2016 I received a Bachelor of Arts in Cinematography and Editing from Hampshire College. I have always loved working with video, and began producing professional work as early as 2007. Since then, I have filmed and edited over 100 projects for a wide variety of individuals, artists, and commercial clients including: Yale University, Hampshire College, Mount Holyoke College, PBS <i>American Masters</i>, Cambridge University Press, ServiceNet, Northampton Chamber of Commerce, Beehive Sewing, and the Global Fibrosis Foundation.
