--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
 <title>Filmmaker, Educator, Artist | Home - Ben Cowper</title>
 <link rel="stylesheet" type="text/css" href="styles.css" />
-<link rel="stylesheet" type="text/css" media="only screen and (max-width: 480px), only screen and (max-device-width: 480px)" href="mobile.css" />
-<link rel="author" href="humans.txt" />
+<link rel="stylesheet" type="text/css" media="only screen and (max-width: 480px), only screen and (max-device-width: 480px)" href="mobile.css">
+<link rel="author" href="humans.txt">
 
 <link rel="shortcut icon" href="icons/favicon.ico">
 <link rel="icon" sizes="16x16 32x32 64x64" href="icons/favicon.ico">
@@ -62,11 +62,7 @@ body, html {
 <hr color="#50A8AF">
 <br>
 
-<div class="gallery">
- <div class="preview">
-  <a href="ben-cowper-about.html"><img name="preview" src="images/Snowflake.jpg" alt="Snowflake"/></a>
- </div>
-</div>
+<a href="ben-cowper-about.html"><img class="space" src="images/Snowflake.jpg" alt="Snowflake" style="width: 80%;"></a>
 
 </div>
 
