--- a/personal-film-portfolio.html
+++ b/personal-film-portfolio.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
+<script src="galleria/galleria-1.5.7.min.js"></script>
+
 <title>Personal Film Portfolio | Ben Cowper - Filmmaker, Educator, Artist</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
 
@@ -11,8 +14,8 @@
 }
 </style>
 
-<link rel="stylesheet" type="text/css" media="only screen and (max-width: 480px), only screen and (max-device-width: 480px)" href="mobile.css" />
-<link rel="author" href="humans.txt" />
+<link rel="stylesheet" type="text/css" media="only screen and (max-width: 480px), only screen and (max-device-width: 480px)" href="mobile.css">
+<link rel="author" href="humans.txt">
 
 <link rel="shortcut icon" href="icons/favicon.ico">
 <link rel="icon" sizes="16x16 32x32 64x64" href="icons/favicon.ico">
@@ -87,21 +90,26 @@
 <hr color="#50A8AF">
 <br>
 
-<div class="gallery">
-    <div class="preview">
-    <img name="preview" src="images/Nona1.jpg" alt="Nona"/>
-  </div>
-  <div class="thumbnails">
-    <img onmouseover="preview.src=Nona1.src" name="Nona1" src="images/Nona1.jpg" alt="Nona 1"/>
-    <img onmouseover="preview.src=Nona2.src" name="Nona2" src="images/Nona2.jpg" alt="Nona 2"/>
-    <img onmouseover="preview.src=Nona3.src" name="Nona3" src="images/Nona3.jpg" alt="Nona 3"/>
-    <img onmouseover="preview.src=Nona4.src" name="Nona4" src="images/Nona4.jpg" alt="Nona 4"/>
-    <img onmouseover="preview.src=Nona5.src" name="Nona5" src="images/Nona5.jpg" alt="Nona 5"/>
-    <img onmouseover="preview.src=Nona6.src" name="Nona6" src="images/Nona6.jpg" alt="Nona 6"/>
-  </div>
-<br>
-
 <div class="space">
+<div class="container">
+<div class="galleria">
+    <img src="images/Nona1.jpg">
+    <img src="images/Nona2.jpg">
+    <img src="images/Nona3.jpg">
+    <img src="images/Nona4.jpg">
+    <img src="images/Nona5.jpg">
+    <img src="images/Nona6.jpg">
+</div>
+</div>
+
+<script>
+(function() { 
+    Galleria.loadTheme('galleria/themes/classic/galleria.classic.min.js');
+    Galleria.run('.galleria');
+}());
+</script>
+
+<br><br>
 <p>
   TRT 17m
 <br><br>
@@ -111,7 +119,6 @@
 <br><br>
   (For a private screening, please <a href="mailto:cowpervideos@gmail.com">contact me</a> directly)
 </p>
-</div>
 </div>
 
 <br><br>
