--- a/tv-studio-renovation.html
+++ b/tv-studio-renovation.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
+<script src="galleria/galleria-1.5.7.min.js"></script>
+
 <title>TV Studio Renovation | Ben Cowper - Filmmaker, Educator, Artist</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
 
@@ -11,8 +14,8 @@
 }
 </style>
 
-<link rel="stylesheet" type="text/css" media="only screen and (max-width: 480px), only screen and (max-device-width: 480px)" href="mobile.css" />
-<link rel="author" href="humans.txt" />
+<link rel="stylesheet" type="text/css" media="only screen and (max-width: 480px), only screen and (max-device-width: 480px)" href="mobile.css">
+<link rel="author" href="humans.txt">
 
 <link rel="shortcut icon" href="icons/favicon.ico">
 <link rel="icon" sizes="16x16 32x32 64x64" href="icons/favicon.ico">
@@ -63,19 +66,18 @@
 <hr color="#50A8AF">
 <br>
 
-<div class="gallery">
-  <div class="preview">
-  <img name="preview" src="images/Cyc2.png" alt="Cyclorama"/>
-  </div>
-    <div class="thumbnails" align="center">
-      <img onmouseover="preview.src=Cyclorama1.src" name="Cyclorama1" src="images/Cyc1.png" alt="Cyclorama"/>
-      <img onmouseover="preview.src=Cyclorama2.src" name="Cyclorama2" src="images/Cyc2.png" alt="Cyclorama"/>
-      <img onmouseover="preview.src=Cyclorama3.src" name="Cyclorama3" src="images/Cyc3.png" alt="Cyclorama"/>
-      <img onmouseover="preview.src=Cyclorama4.src" name="Cyclorama4" src="images/Cyc4.png" alt="Cyclorama"/>
-      <img onmouseover="preview.src=Cyclorama5.src" name="Cyclorama5" src="images/Cyc5.png" alt="Cyclorama"/>
-      <img onmouseover="preview.src=Cyclorama6.src" name="Cyclorama6" src="images/Cyc6.png" alt="Cyclorama"/>
-      <img onmouseover="preview.src=Cyclorama7.src" name="Cyclorama7" src="images/Cyc7.png" alt="Cyclorama"/>
-    </div>
+<div class="space">
+<div class="container">
+<div class="galleria">
+    <img src="images/Cyc1.jpg">
+    <img src="images/Cyc2.jpg">
+    <img src="images/Cyc3.jpg">
+    <img src="images/Cyc4.jpg">
+    <img src="images/Cyc5.jpg">
+    <img src="images/Cyc6.jpg">
+    <img src="images/Cyc7.jpg">
+</div>
+</div>
 </div>
 
 <br><br>
@@ -85,22 +87,26 @@
 <hr color="#50A8AF">
 <br>
 
-<div class="gallery">
-  <div class="preview">
-  <img name="preview2" src="images/Control3.png" alt="Control Room"/>
-  </div>
-    <div class="thumbnails" align="center">
-      <img onmouseover="preview2.src=Control1.src" name="Control1" src="images/Control1.png" alt="Control Room Before"/>
-      <img onmouseover="preview2.src=Control2.src" name="Control2" src="images/Control2.png" alt="Control Room Before"/>
-      <img onmouseover="preview2.src=Control3.src" name="Control3" src="images/Control3.png" alt="Control Room After"/>
-      <img onmouseover="preview2.src=Control4.src" name="Control4" src="images/Control4.png" alt="Control Room After"/>
-      <img onmouseover="preview2.src=Control5.src" name="Control5" src="images/Control5.png" alt="Control Room After"/>
-      <img onmouseover="preview2.src=Control6.src" name="Control6" src="images/Control6.png" alt="Control Room After"/>
-    </div>
-  </div>
-<br>
-
 <div class="space">
+<div class="container">
+<div class="galleria">
+    <img src="images/Control1.jpg">
+    <img src="images/Control2.jpg">
+    <img src="images/Control3.jpg">
+    <img src="images/Control4.jpg">
+    <img src="images/Control5.jpg">
+    <img src="images/Control6.jpg">
+</div>
+</div>
+
+<script>
+(function() { 
+    Galleria.loadTheme('galleria/themes/classic/galleria.classic.min.js');
+    Galleria.run('.galleria');
+}());
+</script>
+
+<br><br>
 <p>
 As the Media Alumni Fellow at Hamphsire College, I upgraded the existing media production facilities. This included designing and constructing a 4K broadcast TV studio with a cyclorama green screen and four camera live switching. I also upgraded workstation computers in four advanced media labs, and serviced and operated a Form Labs 3D printer/scanner.
 </p>
