--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -112,7 +112,7 @@ I am highly skilled in the following roles:
 	  	<h4>Becoming Helen Keller (2016)</h4>
 		<p>Post Production Assistant, Digital Marketing - PBS <i>American Masters</i> documentary</p>
 
-		<h4><a href="/personal.html#nona">Nona (2016)</a></h4>
+		<h4><a href="personal-film-portfolio.html#nona">Nona (2016)</a></h4>
 		<p>Director, Cinematographer, Editor - My thesis film at Hampshire College</p>
 
 		<h4><a target="_blank" href="https://vimeo.com/140096300">Darkville (2015 - 2016)</a></h4>
@@ -121,10 +121,10 @@ I am highly skilled in the following roles:
 	  	<h4><a target="_blank" href="http://shanghaiquartetfilm.com">The Shanghai String Quartet (2016)</a></h4>
 		<p>Production Assistant - Audio recording for documentary film</p>
 
-	  	<h4><a href="/personal.html#somethingrestless">Something Restless (2015)</a></h4>
+	  	<h4><a href="personal-film-portfolio.html#somethingrestless">Something Restless (2015)</a></h4>
 		<p>Technical Director, 5.1 audio mix engineer - Friend's thesis film at Hampshire College</p>
 
-		<h4><a href="/personal.html#hazardlights">Hazard Lights (2014)</a></h4>
+		<h4><a href="personal-film-portfolio.html#hazardlights">Hazard Lights (2014)</a></h4>
 		<p>Assistant Director - Friend's thesis film at Hampshire College</p>
 
 		<h4><a target="_blank" href="https://www.youtube.com/watch?v=0iOustk_6WY">The Games We Play (2014)</a></h4>
