--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -133,9 +133,9 @@ I am highly skilled in the following roles:
 
 	<div class="column">
 		<h3>Teaching</h3>
-		<h4>Education and Media Technology Coordinator (2017)
+		<h4>Education and Media Technology (2017)
 		<br>
-		University of Minnesota-Twin Cities</h4>
+		University of Minnesota - Twin Cities</h4>
 		<p> </p>
 
 		<h4>Media Alumni Fellow (2017)
