--- a/personal-film-portfolio.html
+++ b/personal-film-portfolio.html
@@ -115,9 +115,9 @@
 <br><br>
   director, editor, cinematographer
 <br><br>
-  An experimental horror film about a hitchhiker's descent into madness, adapted from a short story by Stephen King. The film was produced through King's dollar baby program as my thesis film at Hampshire College.
-<br><br>
-  (For a private screening, please <a href="mailto:cowpervideos@gmail.com">contact me</a> directly)
+  An experimental horror film about a hitchhiker's descent into madness, adapted from a short story by Stephen King. The film was produced through King's dollar baby program as my thesis film at Hampshire College. For a private screening, please <a href="mailto:cowpervideos@gmail.com">contact me</a> directly.
+<br><br><br>
+  More information about the film and production process in <a target="_blank" href="http://www.stephenkingshortmovies.com/interviews/ben-cowper-october-18-2017/">my interview</a>  with stephenkingshortmovies.com
 </p>
 </div>
 
