Added current job

--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -133,10 +133,10 @@ I am highly skilled in the following roles:
 
 	<div class="column">
 		<h3>Teaching</h3>
-		<h4>Education and Media Technology (2017)
+		<h4>Video Producer / Academic Technologist (2017)
 		<br>
 		University of Minnesota - Twin Cities</h4>
-		<p> </p>
+		<p>I currently work for the University's Psychology Department. I consult with faculty and graduate students, produce videos, design websites, and manage online courses on Moodle and Canvas</p>
 
 		<h4>Media Alumni Fellow (2017)
 		<br>
