changed landing image back

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body, html {
 <hr color="#50A8AF">
 <br>
 
-<a href="ben-cowper-about.html"><img class="space" src="images/Yellowstone.jpg" alt="Yellowstone" style="width: 80%;"></a>
+<a href="ben-cowper-about.html"><img class="space" src="images/Snowflake.jpg" alt="Snowflake" style="width: 80%;"></a>
 
 </div>
 
