updated personal info, CV

--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -65,7 +65,7 @@
 <div class="space">
 
 <p>
-In 2016 I received a Bachelor of Arts in Cinematography and Editing from Hampshire College. I have always loved working with video, and began producing professional work as early as 2007. Since then, I have filmed and edited over 100 projects for a wide variety of individuals, artists, and commercial clients including: Yale University, Hampshire College, Mount Holyoke College, PBS <i>American Masters</i>, Cambridge University Press, ServiceNet, Northampton Chamber of Commerce, Beehive Sewing, and the Global Fibrosis Foundation.
+I have always loved working with video, and began producing professional work as early as 2007. Since then, I have filmed and edited over 100 projects for a wide variety of individuals, artists, and commercial clients including: Yale University, Hampshire College, Mount Holyoke College, PBS <i>American Masters</i>, Cambridge University Press, ServiceNet, Northampton Chamber of Commerce, Beehive Sewing, and the Global Fibrosis Foundation.
 
 <br><br>
 
@@ -107,33 +107,43 @@ I am highly skilled in the following roles:
 	<div class="column">
 		<h3>Film</h3>
 		<h4>Holding Hands with Ilse (2017)</h4>
-		<p>Subtitling, Audio Mixing, Post Production Assistant</p>
+		<p>Subtitling, audio mix engineer, post production</p>
   	
-	  	<h4>Becoming Helen Keller (2016)</h4>
-		<p>Post Production Assistant, Digital Marketing - PBS <i>American Masters</i> documentary</p>
+	  	<h4><a target="_blank" href="https://www.becominghelenkeller.org">Becoming Helen Keller</a></h4>
+		<p>Post production, digital marketing - upcoming PBS <i>American Masters</i> documentary</p>
 
 		<h4><a href="personal-film-portfolio.html#nona">Nona (2016)</a></h4>
-		<p>Director, Cinematographer, Editor - My thesis film at Hampshire College</p>
+		<p>Director, Cinematographer, Editor - my thesis film at Hampshire College</p>
 
 		<h4><a target="_blank" href="https://vimeo.com/140096300">Darkville (2015 - 2016)</a></h4>
 		<p>Director of Photography (2 episodes) - Channel 101 show screened at UCB Theatre in New York</p>
 
-	  	<h4><a target="_blank" href="http://shanghaiquartetfilm.com">The Shanghai String Quartet (2016)</a></h4>
-		<p>Production Assistant - Audio recording for documentary film</p>
+	  	<h4><a target="_blank" href="http://shanghaiquartet.com">The Shanghai Quartet</a></h4>
+		<p>Production Assistant - audio recording for upcoming documentary film</p>
 
 	  	<h4><a href="personal-film-portfolio.html#somethingrestless">Something Restless (2015)</a></h4>
 		<p>Technical Director, 5.1 audio mix engineer - Friend's thesis film at Hampshire College</p>
 
 		<h4><a href="personal-film-portfolio.html#hazardlights">Hazard Lights (2014)</a></h4>
-		<p>Assistant Director - Friend's thesis film at Hampshire College</p>
+		<p>Assistant Director - friend's thesis film at Hampshire College</p>
 
 		<h4><a target="_blank" href="https://www.youtube.com/watch?v=0iOustk_6WY">The Games We Play (2014)</a></h4>
-		<p>Camera Operator - Friend's thesis film at Hampshire College</p>
+		<p>Camera Operator - friend's thesis film at Hampshire College</p>
+
+		<br>
+
+		<h3>Awards and Grants</h3>
+		<h4>Tom Joslin Grant (2016)</h4>
+		<p>Received for my thesis film <i>Nona</i> at Hampshire College</p>
+		<h4>Green Prize (2012)</h4>
+		<p>Awarded for excellence in dramatics at Kingswood Oxford</p>
+		<h4>Williston-Northampton Film Festival (2012)</h4>
+		<p>Director of a short film selected for the festival</p>
 	</div>
 
 	<div class="column">
 		<h3>Teaching</h3>
-		<h4>Video Producer / Academic Technologist (2017)
+		<h4>Video Producer / Academic Technologist
 		<br>
 		University of Minnesota - Twin Cities</h4>
 		<p>I currently work for the University's Psychology Department. I consult with faculty and graduate students, produce videos, design websites, and manage online courses on Moodle and Canvas</p>
@@ -175,24 +185,28 @@ I am highly skilled in the following roles:
 
 	<div class="column">
 		<h3>Web, Graphics, Coding</h3>
+		<h4><a target="_blank" href="http://intranet.psych.umn.edu/">UMN Psychology Intranet</a>
+		<br>
+		<a target="_blank" href="https://cla.umn.edu/psychology">UMN Psychology Department</a></h4>
+		<p>Website Developer and Graphic Designer - Drupal, CSS, HTML, Photoshop</p>		
 		<h4><a target="_blank" href="https://www.becominghelenkeller.org">Becoming Helen Keller</a></h4>
-		<p>Web Design, Graphics - Squarespace, CSS, HTML, Photoshop</p>
+		<p>Website Developer and Graphic Designer - Squarespace, CSS, HTML, Photoshop</p>
 		<h4><a target="_blank" href="https://www.beehivesewing.com">Beehive Sewing</a></h4>
-		<p>Site map, Layout - Wordpress</p>
+		<p>User Experience Designer - Wordpress, CSS, HTML</p>
 		<h4><a target="_blank" href="http://globalfibrosis.org/">The Global Fibrosis Foundation</a></h4>
-		<p>Web Design, Graphics - Squarespace, CSS, HTML, Illustrator</p>
+		<p>Web Developer and Graphic Designer - Squarespace, CSS, HTML, Illustrator</p>
 
 		<br>
 
-		<h3>Awards, Grants, Certifications</h3>
-		<h4>Tom Joslin Grant (2016)</h4>
-		<p>Received funding for my thesis film <i>Nona</i> at Hampshire College</p>
-		<h4>Teaching Assistant Certificate (2015)</h4>
-		<p>Completed seminar in teaching</p>
-		<h4>Green Prize (2012)</h4>
-		<p>Awarded for excellence in dramatics at Kingswood Oxford</p>
-		<h4>Williston-Northampton Film Festival (2012)</h4>
-		<p>Director of a short film screened at the festival</p>
+		<h3>Education</h3>
+		<h4>University of Minnesota</h4>
+		<p>Some Graduate coursework in College of Liberal Arts</p>
+		<h4>Hampshire College</h4>
+		<p>B.A. in Cinematography and Editing
+		<br>
+		Certificate for Teaching Assistant seminar</p>
+		<h4>Berkshire Film and Media Collaborative</h4>
+		<p>Certificate for Grip workshop</p>
 	</div>
 </div>
 </div>
