--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -95,6 +95,9 @@
 <br><br>
   All photographs by Ben Cowper
 </p>
+<br><br>
+<p>
+  Further photography work with <a target="_blank" href="https://www.jandsvision.com/product/js-felis-vintage-cat-eyes-large-fit-polarized-100uv-sunglasses-women/">J+S Vision can be seen here</a>
 </div>
 </div>
 
