--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -200,7 +200,7 @@ I am highly skilled in the following roles:
 
 		<h3>Education</h3>
 		<h4>University of Minnesota</h4>
-		<p>Some Graduate coursework in College of Liberal Arts</p>
+		<p>Graduate level coursework in College of Liberal Arts</p>
 		<h4>Hampshire College</h4>
 		<p>B.A. in Cinematography and Editing
 		<br>
