--- a/tv-studio-renovation.html
+++ b/tv-studio-renovation.html
@@ -108,7 +108,7 @@
 
 <br><br>
 <p>
-As the Media Alumni Fellow at Hamphsire College, I upgraded the existing media production facilities. This included designing and constructing a 4K broadcast TV studio with a cyclorama green screen and four camera live switching. I also upgraded workstation computers in four advanced media labs, and serviced and operated a Form Labs 3D printer/scanner.
+As the Media Alumni Fellow at Hampshire College, I upgraded the existing media production facilities. This included designing and constructing a 4K broadcast TV studio with a cyclorama green screen and four camera live switching. I also upgraded workstation computers in four advanced media labs, and serviced and operated a Form Labs 3D printer/scanner and an HTC Vive VR headset.
 </p>
 </div>
 </div>
