--- a/personal-film-portfolio.html
+++ b/personal-film-portfolio.html
@@ -50,6 +50,7 @@
   <li><a href="tv-studio-renovation.html">tv studio renovation</a></li>
   <li><a href="photography-portfolio.html">photography</a></li>
   <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
+  <li><a target="_blank" href="Ben Cowper | c.v..pdf">c.v.</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
   </div>
