Revised content about page

--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -73,28 +73,31 @@ I have always loved working with video, and began producing professional work as
 I am highly skilled in the following roles:
 <br><br>
   <b>Cinematographer</b>
-  DSLR (5DmkIII with Magic Lantern), Blackmagic, Canon C100, GoPro, 16mm Bolex, Super 8
+  5DmkIII w/Magic Lantern, Blackmagic Cinema, Canon C100, GoPro, 16mm Bolex, Super 8
 <br><br>
   <b>Editor, Colorist</b>
   Adobe Premiere, After Effects, Photoshop, Final Cut Pro, DaVinci Resolve
 <br><br>
   <b>Audio Engineer</b>
-  5.1 surround and stereo recording/mixing: ProTools, Audition, Logic
+  5.1 surround and stereo recording/mixing (ProTools, Audition, Logic)
 <br><br>
-  <b>Web Design, Coding</b>
-  Python, HTML, CSS, LATEX, Arduino, Apple, Google, Microsoft, Squarespace, Wordpress
+  <b>Web Designer</b>
+  HTML, CSS, Squarespace, Drupal, Wordpress
 <br><br>
   <b>Lighting Designer</b>
   Designing and drawing lighting plots for film and theatre productions
 <br><br>
   <b>Photographer</b>
-  Digital, 35mm, medium format, and large format
+  Digital, 35mm, medium format, and large format film
 <br><br>
   <b>Archivist</b>
-  Digitally transferring and preserving archaic media formats
+  Digitally transferring, preserving, and authoring archaic media formats
 <br><br>
   <b>Live Streaming</b>
-  Installation and live switching of audio and video streams for television, theatre, and conferences
+  Live switching of audio and video for television, theatre, and conferences. Designed and built a 4 camera live TV production and green screen studio. (Blackmagic ATEM, Roland V-Mixer)
+<br><br>
+  <b>IT and Academic Technology</b>
+  Python, Apple Computers, Google, LaTeX, Arduino, Microsoft Office, Canvas, Moodle
 </p>
 
 </div>
@@ -106,7 +109,7 @@ I am highly skilled in the following roles:
 <div class="columns">
 
 	<div class="column">
-		<h3>Film</h3>
+		<h3>Selected Filmography</h3>
 		<h4>Holding Hands with Ilse (2017)</h4>
 		<p>Subtitling, audio mix engineer, post production</p>
   	
@@ -133,7 +136,7 @@ I am highly skilled in the following roles:
 
 		<br>
 
-		<h3>Awards and Grants</h3>
+		<h3>Awards and Achievements</h3>
 		<h4>Tom Joslin Grant (2016)</h4>
 		<p>Received for my thesis film <i>Nona</i> at Hampshire College</p>
 		<h4>Green Prize (2012)</h4>
@@ -147,12 +150,12 @@ I am highly skilled in the following roles:
 		<h4>Video Producer / Academic Technologist
 		<br>
 		University of Minnesota - Twin Cities</h4>
-		<p>I currently work for the University's Psychology Department. I consult with faculty and graduate students, produce videos, design websites, and manage online courses on Moodle and Canvas</p>
+		<p>I consult with faculty and graduate students, produce videos, design websites, and manage online courses for the Psychology Department.</p>
 
 		<h4>Media Alumni Fellow (2017)
 		<br>
 		Hampshire College</h4>
-		<p>Served as the primary resource for faculty and students needing media production assistance, put together instructional videos and guides for equipment, led workshops, and lectured on color grading and video editing</p>
+		<p>I was the primary resource for faculty and students of all skill levels needing assistance in media production, broadcast TV, green screen, 3D printing, 3D scanning, and virtual reality. I also led workshops and lectured on color grading and video editing.</p>
 
 		<h4>Guest Instructor (2016)
 		<br>
@@ -162,7 +165,7 @@ I am highly skilled in the following roles:
 		<h4>Assistant Instructor (2015 - 2016)
 		<br>
 		Creative Media Institute</h4>
-		<p>Summer film program, 2 years</p>
+		<p>Instructor and mentor for high school Summer film program (2 years)</p>
 
 		<h4>Teaching Assistant (2014 - 2016)
 		<br>
