--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -179,7 +179,7 @@ I am highly skilled in the following roles:
 		<h4>Instructor (2014)
 		<br>
 		Hampshire College</h4>
-		<p>Video Production Collective: I created and taught a college level video production course completed by 12 students, for which they received academic credit</p>
+		<p>Video Production Collective: I created and taught a college level video production course completed by 12 students, for which they received academic credit.</p>
 
 		<h4>Teaching Assistant (2012)
 		<br>
@@ -198,7 +198,7 @@ I am highly skilled in the following roles:
 		<h4><a target="_blank" href="https://www.beehivesewing.com">Beehive Sewing</a></h4>
 		<p>User Experience Designer - Wordpress, CSS, HTML</p>
 		<h4><a target="_blank" href="http://globalfibrosis.org/">The Global Fibrosis Foundation</a></h4>
-		<p>Web Developer and Graphic Designer - Squarespace, CSS, HTML, Illustrator</p>
+		<p>Web Developer and Graphic Designer - Squarespace, CSS, HTML, Adobe Illustrator</p>
 
 		<br>
 
