updated cv and res, altered about page

--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -70,149 +70,49 @@ I have always loved working with video, and began producing professional work as
 
 <br><br>
 
-I am highly skilled in the following roles:
+A more complete list of my professional and personal work can be found on my C.V.
+
+<br><br><br>
+
+Areas of Technical Expertise:
 <br><br>
   <b>Cinematographer</b>
+  <br>
   5DmkIII w/Magic Lantern, Blackmagic Cinema, Canon C100, GoPro, 16mm Bolex, Super 8
 <br><br>
   <b>Editor, Colorist</b>
+  <br>
   Adobe Premiere, After Effects, Photoshop, Final Cut Pro, DaVinci Resolve
 <br><br>
   <b>Audio Engineer</b>
+  <br>
   5.1 surround and stereo recording/mixing (ProTools, Audition, Logic)
 <br><br>
   <b>Web Designer</b>
+  <br>
   HTML, CSS, Squarespace, Drupal, Wordpress
 <br><br>
   <b>Lighting Designer</b>
+  <br>
   Designing and drawing lighting plots for film and theatre productions
 <br><br>
   <b>Photographer</b>
+  <br>
   Digital, 35mm, medium format, and large format film
 <br><br>
   <b>Archivist</b>
+  <br>
   Digitally transferring, preserving, and authoring archaic media formats
 <br><br>
   <b>Live Streaming</b>
+  <br>
   Live switching of audio and video for television, theatre, and conferences. Designed and built a 4 camera live TV production and green screen studio. (Blackmagic ATEM, Roland V-Mixer)
 <br><br>
   <b>IT and Academic Technology</b>
+  <br>
   Python, Apple Computers, Google, LaTeX, Arduino, Microsoft Office, Canvas, Moodle
 </p>
 
-</div>
-
-<br>
-
-<hr color="#af5750">
-
-<div class="columns">
-
-	<div class="column">
-		<h3>Selected Filmography</h3>
-		<h4>Holding Hands with Ilse (2017)</h4>
-		<p>Subtitling, audio mix engineer, post production</p>
-  	
-	  	<h4><a target="_blank" href="https://www.becominghelenkeller.org">Becoming Helen Keller</a></h4>
-		<p>Post production, digital marketing - upcoming PBS <i>American Masters</i> documentary</p>
-
-		<h4><a href="personal-film-portfolio.html#nona">Nona (2016)</a></h4>
-		<p>Director, Cinematographer, Editor - my thesis film at Hampshire College</p>
-
-		<h4><a target="_blank" href="https://vimeo.com/140096300">Darkville (2015 - 2016)</a></h4>
-		<p>Director of Photography (2 episodes) - Channel 101 show screened at UCB Theatre in New York</p>
-
-	  	<h4><a target="_blank" href="http://shanghaiquartet.com">The Shanghai Quartet</a></h4>
-		<p>Production Assistant - audio recording for upcoming documentary film</p>
-
-	  	<h4><a href="personal-film-portfolio.html#somethingrestless">Something Restless (2015)</a></h4>
-		<p>Technical Director, 5.1 audio mix engineer - Friend's thesis film at Hampshire College</p>
-
-		<h4><a href="personal-film-portfolio.html#hazardlights">Hazard Lights (2014)</a></h4>
-		<p>Assistant Director - friend's thesis film at Hampshire College</p>
-
-		<h4><a target="_blank" href="https://www.youtube.com/watch?v=0iOustk_6WY">The Games We Play (2014)</a></h4>
-		<p>Camera Operator - friend's thesis film at Hampshire College</p>
-
-		<br>
-
-		<h3>Awards and Achievements</h3>
-		<h4>Tom Joslin Grant (2016)</h4>
-		<p>Received for my thesis film <i>Nona</i> at Hampshire College</p>
-		<h4>Green Prize (2012)</h4>
-		<p>Awarded for excellence in dramatics at Kingswood Oxford</p>
-		<h4>Williston-Northampton Film Festival (2011)</h4>
-		<p>Director of a short film selected for the festival</p>
-	</div>
-
-	<div class="column">
-		<h3>Teaching</h3>
-		<h4>Video Producer / Academic Technologist
-		<br>
-		University of Minnesota - Twin Cities</h4>
-		<p>I consult with faculty and graduate students, produce videos, design websites, and manage online courses for the Psychology Department.</p>
-
-		<h4>Media Alumni Fellow (2017)
-		<br>
-		Hampshire College</h4>
-		<p>I was the primary resource for faculty and students of all skill levels needing assistance in media production, broadcast TV, green screen, 3D printing, 3D scanning, and virtual reality. I also led workshops and lectured on color grading and video editing.</p>
-
-		<h4>Guest Instructor (2016)
-		<br>
-		Amherst College</h4>
-		<p>FAMS-228: Super 8 Film and Digital Video</p>
-
-		<h4>Assistant Instructor (2015 - 2016)
-		<br>
-		Creative Media Institute</h4>
-		<p>Instructor and mentor for high school Summer film program (2 years)</p>
-
-		<h4>Teaching Assistant (2014 - 2016)
-		<br>
-		Hampshire College</h4>
-		<p>HACU-0287: Performance & Directing
-		<br>
-		HACU-0209: Video 1
-		<br>
-		NS-0254: Science Fiction Film</p>
-
-		<h4>Instructor (2014)
-		<br>
-		Hampshire College</h4>
-		<p>Video Production Collective: I created and taught a college level video production course completed by 12 students, for which they received academic credit.</p>
-
-		<h4>Teaching Assistant (2012)
-		<br>
-		Kingswood Oxford</h4>
-		<p>Advanced Digital Video</p>
-    </div>
-
-	<div class="column">
-		<h3>Web, Graphics, Coding</h3>
-		<h4><a target="_blank" href="http://intranet.psych.umn.edu/">UMN Psychology Intranet</a>
-		<br>
-		<a target="_blank" href="https://cla.umn.edu/psychology">UMN Psychology Department</a></h4>
-		<p>Website Developer and Graphic Designer - Drupal, CSS, HTML, Photoshop</p>		
-		<h4><a target="_blank" href="https://www.becominghelenkeller.org">Becoming Helen Keller</a></h4>
-		<p>Website Developer and Graphic Designer - Squarespace, CSS, HTML, Photoshop</p>
-		<h4><a target="_blank" href="https://www.beehivesewing.com">Beehive Sewing</a></h4>
-		<p>User Experience Designer - Wordpress, CSS, HTML</p>
-		<h4><a target="_blank" href="http://globalfibrosis.org/">The Global Fibrosis Foundation</a></h4>
-		<p>Web Developer and Graphic Designer - Squarespace, CSS, HTML, Adobe Illustrator</p>
-
-		<br>
-
-		<h3>Education</h3>
-		<h4>University of Minnesota</h4>
-		<p>Graduate level coursework in College of Liberal Arts</p>
-		<h4>Hampshire College</h4>
-		<p>B.A. in Cinematography and Editing
-		<br>
-		Certificate for Teaching Assistant seminar</p>
-		<h4>Berkshire Film and Media Collaborative</h4>
-		<p>Certificate for Grip workshop</p>
-	</div>
-</div>
 </div>
 
 <br><br>
