formatting update on about page

--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -66,16 +66,23 @@
 <div class="space">
 
 <p>
-I have always loved working with video, and began producing professional work as early as 2007. Since then, I have filmed and edited over 100 projects for a wide variety of individuals, artists, and commercial clients including: Yale University, Hampshire College, Mount Holyoke College, PBS <i>American Masters</i>, Cambridge University Press, ServiceNet, Northampton Chamber of Commerce, Beehive Sewing, and the Global Fibrosis Foundation.
+I have always loved working with video, and began producing professional work as early as 2007. Since then I have worked on over 100 projects for a wide variety of individuals, artists, and commercial clients including: Yale University, Hampshire College, Mount Holyoke College, PBS <i>American Masters</i>, Cambridge University Press, Northampton Chamber of Commerce, and The Global Fibrosis Foundation.
 
 <br><br>
 
-A more complete list of my professional and personal work can be found on my C.V.
+A more complete list of my professional and personal work can be found <a target="_blank" href="Ben Cowper | c.v..pdf">here on my C.V.</a>
 
-<br><br><br>
-
-Areas of Technical Expertise:
 <br><br>
+
+<hr color="#af5750">
+
+<br>
+
+<h3 style="text-align: left;">Areas of Technical Expertise:</h3>
+
+<br>
+
+<p>
   <b>Cinematographer</b>
   <br>
   5DmkIII w/Magic Lantern, Blackmagic Cinema, Canon C100, GoPro, 16mm Bolex, Super 8
